--- a/admin/group-list.html
+++ b/admin/group-list.html
@@ -82,10 +82,10 @@
                     </div>
                     <!-- List group -->
                     <div class="list-group">
-                        <a href="post.html" class="list-group-item">Web设计</a>
-                        <a href="post.html#" class="list-group-item">Morbi leo risus</a>
-                        <a href="post.html#" class="list-group-item">APP开发</a>
-                        <a href="#" class="list-group-item list-group-item-info">
+                        <a href="group-post.html" class="list-group-item">Web设计</a>
+                        <a href="group-post.html" class="list-group-item">Morbi leo risus</a>
+                        <a href="group-post.html" class="list-group-item">APP开发</a>
+                        <a href="group-post.html" class="list-group-item list-group-item-info">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-6">显示全部</div>
                                 <div class="col-sm-6 col-lg-6 text-right">
