--- a/admin/home.html
+++ b/admin/home.html
@@ -82,9 +82,9 @@
                     </div>
                     <!-- List group -->
                     <div class="list-group">
-                        <a href="post.html" class="list-group-item">Web设计</a>
-                        <a href="post.html#" class="list-group-item">Morbi leo risus</a>
-                        <a href="post.html#" class="list-group-item">APP开发</a>
+                        <a href="group-post.html" class="list-group-item">Web设计</a>
+                        <a href="group-post.html" class="list-group-item">Morbi leo risus</a>
+                        <a href="group-post.html" class="list-group-item">APP开发</a>
                         <a href="group-list.html" class="list-group-item">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-6">显示全部</div>
