--- a/admin/group-list.html
+++ b/admin/group-list.html
@@ -157,7 +157,7 @@
                                 <div class="row">
                                     <div class="col-lg-11">
                                         <dl>
-                                            <dt><a href="post.html" class="nulinkunderline">学生创意发展中心小组</a></dt>
+                                            <dt><a href="group-post.html" class="nulinkunderline">学生创意发展中心小组</a></dt>
                                             <dd class="small ptb5">45 个成员 在此聚集</dd>
                                             <dd class="small">Bootstrap是Twitter推出的一个开源的用于前端开发的工具包。它由Twitter的设计师Mark Otto和Jacob Thornton合作开发，是一个CSS/HTML框架。Bootstrap提供了优雅的HTML和CSS规范，它即是由动态CSS语言Less写成。Bootstrap一经推出后颇受欢迎，一直是GitHub上的热门开源项目，包括NASA的MSNBC（微软全国广播公司）的Breaking News都使用了该项目。</dd>
                                         </dl>
@@ -178,7 +178,7 @@
                                 <div class="row">
                                     <div class="col-lg-11">
                                         <dl>
-                                            <dt><a href="post.html" class="nulinkunderline">Bootstrap研究</a></dt>
+                                            <dt><a href="group-post.html" class="nulinkunderline">Bootstrap研究</a></dt>
                                             <dd class="small ptb5">34 个成员 在此聚集</dd>
                                             <dd class="small">Twitter Bootstrap：前端框架利器 Twitter 在2011年8月将Bootstrap开源，并在2012年2月3日发布了2.0版。在GitHub上，这个项目已有拥超过2万位关注者和4000个分支。</dd>
                                         </dl>
