--- a/admin/head.html
+++ b/admin/head.html
@@ -1,5 +1,6 @@
 ﻿  <!-- Static  navbar box-shadow: rgb(190, 190, 190) 0px 0px 3px 0px; -->
-<nav class="navbar navbar-default navbar-static-top" role="navigation"  style="border-bottom-color: #D9D9DE;">
+<!--<nav class="navbar navbar-default navbar-static-top" role="navigation"  style="border-bottom-color: #D9D9DE; background-color:#fff;">-->
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="border-bottom-color: #bfbfbf;box-shadow: rgb(190, 190, 190) 0px 0px 3px 0px;  background-color:#fff;">
     <div class="container">
         <div class="navbar-header">
 
