--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -53,6 +53,16 @@
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
                                     小组
+                                    <div class="btn-group">
+
+                                        <span class="glyphicon glyphicon-cog cursor" data-toggle="dropdown">
+                                            <span class="sr-only">新增</span>
+                                        </span>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li><a href="group-create.html"><i class="glyphicon glyphicon-plus"></i>  新建</a></li>
+                                            <li><a href="#" data-toggle="modal" data-target=".ren-bs-join-group-modal-sm"><i class="glyphicon glyphicon-hand-down"></i>  加入</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
 
