--- a/admin/settings-contacts.html
+++ b/admin/settings-contacts.html
@@ -11,7 +11,7 @@
 
     <link rel="icon" href="../favicon.ico">
 
-    <title>隐私设置 — 奇异点・qiyidea.com | 在校学生创业平台</title>
+    <title>联系人 — 奇异点・qiyidea.com | 在校学生创业平台</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="settings-secret.html" class="list-group-item list-group-item-info">
+                    <a href="settings-secret.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">隐私设置</div>
                             <div class="col-sm-4 col-lg-4 text-right">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="settings-contacts.html" class="list-group-item">
+                    <a href="settings-contacts.html" class="list-group-item list-group-item-info">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">联系人</div>
                             <div class="col-sm-4 col-lg-4 text-right">
@@ -116,7 +116,7 @@
                 <!--为post 消息列表-->
                 <div class="panel panel-default">
                     <div class="panel-heading panel-danger">
-                        隐私设置
+                        联系人
                     </div>
                     <div class="panel-body">
                         <h5>通过以下方式可以搜索到我</h5>
