--- a/admin/settings.html
+++ b/admin/settings.html
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="list-group-item">
+                    <a href="settings-contacts.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">联系人</div>
                             <div class="col-sm-4 col-lg-4 text-right">
