--- a/admin/head.html
+++ b/admin/head.html
@@ -39,6 +39,7 @@
 
                     <a href="#" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><img src="../img/avatar2_small.jpg" class="img-circle pointer dropdown-toggle" data-toggle="dropdown"> admin <span class="caret"></span></a>
                     <ul class="dropdown-menu ren-dropdown-menu" role="menu" aria-labelledby="drop3">
+                        <li><a href="#"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; 个人主页</a> </li>
                         <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
                         <li><a href="doc.html"><i class="glyphicon glyphicon-book"></i> &nbsp;&nbsp;我的校园</a></li>
                         <li><a href="user-page.html"><i class="glyphicon glyphicon-user"></i> &nbsp;&nbsp;个人中心</a></li>
