--- a/admin/settings-contacts.html
+++ b/admin/settings-contacts.html
@@ -43,23 +43,6 @@
             <!--left-->
             <div class="col-xs-3">
 
-                <!--<div class="panel panel-primary">
-
-
-                    <div class="list-group">
-                        <a href="#" class="list-group-item">Web设计</a>
-                        <a href="#" class="list-group-item">Morbi leo risus</a>
-                        <a href="#" class="list-group-item">APP开发</a>
-                        <a href="#" class="list-group-item list-group-item-info">
-                            <div class="row">
-                                <div class="col-sm-6 col-lg-6">显示全部</div>
-                                <div class="col-sm-6 col-lg-6 text-right">
-                                    <i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">更多</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>-->
 
                 <div class="list-group ">
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
@@ -113,64 +96,79 @@
             <!--right box-->
             <div class="col-xs-9">
 
-                <!--为post 消息列表-->
-                <div class="panel panel-default">
-                    <div class="panel-heading panel-danger">
-                        联系人
-                    </div>
-                    <div class="panel-body">
-                        <h5>通过以下方式可以搜索到我</h5>
-                         <div class="pt10">
-                            <form class="form-horizontal" role="form">
-                                
-                                <div class="form-group">
-                                    <label  class="col-sm-3 control-label">姓名</label>
-                                    <div class="col-sm-9">
-                                        <div class="btn-group btn-group-sm">
-                                            <button type="button" class="btn btn-success active">开启</button>
-                                            <button type="button" class="btn btn-default">关闭</button>
-                                        </div>
-                                    </div>
+
+                <div class="panel panel-default paddbottom50">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <h4>联系人</h4>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="input-group input-group-sm">
+                                    <input type="text" class="form-control" placeholder="查找成员…">
+                                    <span class="input-group-addon input-group-btn cursor"><i class="glyphicon glyphicon-search"></i></span>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">手机号</label>
-                                    <div class="col-sm-9">
-                                        <div class="btn-group btn-group-sm">
-                                            <button type="button" class="btn btn-default ">开启</button>
-                                            <button type="button" class="btn btn-warning active">关闭</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label  class="col-sm-3 control-label">QQ</label>
-                                    <div class="col-sm-9">
-                                        <div class="btn-group btn-group-sm">
-                                            <button type="button" class="btn btn-default">开启</button>
-                                            <button type="button" class="btn btn-warning active">关闭</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label   class="col-sm-3 control-label">邮箱</label>
-                                    <div class="col-sm-9">
-                                        <div class="btn-group btn-group-sm">
-                                            <button type="button" class="btn btn-success active">开启</button>
-                                            <button type="button" class="btn btn-default">关闭</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <hr class="clearfix mt5mb15">
-                                <div class="form-group">
-                                    <div class="col-sm-offset-3 col-sm-9">
-                                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 保存设置</button>
-                                    </div>
-                                </div>
-                            </form>
+                            </div>
                         </div>
+                    </div>
+                    <!--------------------------组员信息------------------------------->
+                    <div class="panel-body">
+                        <div class="ptb5"></div>
+                        <div class="media ren-newest-info">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
+                            </a>
+                            <div class="media-body pl15">
+                                <div class="row">
+                                    <div class="col-lg-9 small">
+                                        <dl>
+                                            <dt>
+                                                <a href="/home#/profile/53045947">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
+                                            </dt>
+                                            <dd>初二学生  数学达人  二等级   外向  游戏迷  小说爱好者  机器人爱好者 中学生geek党</dd>
+                                            <dd>简介：小清新的女汉子一枚</dd>
+                                            <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校</dd>
+                                        </dl>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <button class="btn btn-sm btn-success">
+                                            <span class="glyphicon glyphicon-plus"></span>   加关注
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    <hr />
+
+                        <div class="media ren-newest-info">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
+                            </a>
+                            <div class="media-body pl15">
+                                <div class="row">
+                                    <div class="col-lg-9 small">
+                                        <dl>
+                                            <dt>
+                                                <a href="/home#/profile/53045947">炝炒空心菜</a> &nbsp;<span class="fz10 color-grey">89人关注</span> 
+                                            </dt>
+                                            <dd>初二学生  数学达人  二等级   外向  游戏迷  小说爱好者  机器人爱好者 </dd>
+                                            <dd>简介：小清新的女汉子一枚</dd>
+                                            <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校</dd>
+                                        </dl>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <button class="btn btn-sm btn-success">
+                                            <span class="glyphicon glyphicon-plus"></span>   加关注
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
-
 
 
             </div>
