--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -53,15 +53,9 @@
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
                                     小组
-                                    <div class="btn-group">
-
-                                        <span class="glyphicon glyphicon-cog cursor" data-toggle="dropdown">
-                                            <span class="sr-only">新增</span>
-                                        </span>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="group-create.html"><i class="glyphicon glyphicon-plus"></i>  新建</a></li>
-                                            <li><a href="#" data-toggle="modal" data-target=".ren-bs-join-group-modal-sm"><i class="glyphicon glyphicon-hand-down"></i>  加入</a></li>
-                                        </ul>
+                                    <div class="btn-group pull-right paddright13">
+                                        <a href="../admin/group-admin-manege.html" class="glyphicon glyphicon-cog cursor" title="群组管理">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -114,7 +108,7 @@
                     <!--------------------------组员信息------------------------------->
                     <div class="panel-body">
                         <div class="dropdown pull-right">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                            <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
                                 更多
                                 <span class="caret"></span>
                             </button>
@@ -196,7 +190,7 @@
                     </div>
                     <div class="panel-body">
                         <div class="dropdown pull-right">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                            <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
                                 更多
                                 <span class="caret"></span>
                             </button>
@@ -221,7 +215,6 @@
                                             <dd>成员</dd>
                                         </dl>
                                     </div>
-
                                 </div>
 
                             </div>
