--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -243,35 +243,80 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-body">
-                        <div class="media pt10 ren-newest-info">
-                            <a class="pull-left" href="#">
-                                <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
-                            </a>
-                            <div class="media-body pl15">
-                                <div class="row">
-                                    <div class="col-lg-11">
-                                        <dl>
-                                            <dt>
-                                                <span class="sender-and-recipients">
-                                                    <a class="msg-receiver sender-name" href="/home#/profile/53045947">张先生</a>至
-                                                    <a href="#/group?id=10279195" class="msg-receiver">
-                                                        <span class="receiver-square" style="background-color:#336699"></span>Mr. 山田's 12th grade group
-                                                    </a>
-                                                </span>
-                                            </dt>
-                                            <dd>这是一个神奇的网站</dd>
-                                        </dl>
-                                    </div>
-                                    <div class="col-lg-1">
-                                        <i class="glyphicon glyphicon-cog ren-icon-edit cursor"><span class="sr-only">编辑</span></i>
-                                    </div>
+                    <div class="panel-body"  style=" padding:0px 15px 0px 15px;">
+                        <!-------------------------------------帖子信息----------------------------------------->
+                        <div class="row border-doil">
+                            <div class="col-lg-8 title-type">
+                                <a href="group-post-details .html" title="这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！" class="title title-hover-bolor">这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！</a>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="col-lg-4 padding0">
+                                    12回应
                                 </div>
-
+                                <div class="col-lg-5 padding0">
+                                    18分钟前
+                                </div>
+                                <div class="col-lg-3 padding0">
+                                    <a href="javascript:void(0)" class="title-hover-bolor">Sunshine</a>
+                                </div>
                             </div>
                         </div>
+                        <div class="row border-doil">
+                            <div class="col-lg-8 title-type">
+                                <a href="group-post-details .html" title=" 这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！" class="title title-hover-bolor">这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！</a>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="col-lg-4 padding0">
+                                    1234回应
+                                </div>
+                                <div class="col-lg-5 padding0">
+                                    2014-09-25
+                                </div>
+                                <div class="col-lg-3 padding0">
+                                    <a href="javascript:void(0)" class="title-hover-bolor">Sunshine</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-------------------------------------帖子信息----------------------------------------->
+                        <div class="row text-center">
+                            <ul class="pagination">
+                                <li><a href="#">&laquo;</a></li>
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li><a href="#">&raquo;</a></li>
+                            </ul>
+                        </div>
+                        <!--<div class="media pt10 ren-newest-info">
+            <a class="pull-left" href="#">
+                <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
+            </a>
+            <div class="media-body pl15">
+                <div class="row">
+                    <div class="col-lg-11">
+                        <dl>
+                            <dt>
+                                <span class="sender-and-recipients">
+                                    <a class="msg-receiver sender-name" href="/home#/profile/53045947">张先生</a>至
+                                    <a href="#/group?id=10279195" class="msg-receiver">
+                                        <span class="receiver-square" style="background-color:#336699"></span>Mr. 山田's 12th grade group
+                                    </a>
+                                </span>
+                            </dt>
+                            <dd>这是一个神奇的网站</dd>
+                        </dl>
                     </div>
-                    <div class="panel-footer">
+                    <div class="col-lg-1">
+                        <i class="glyphicon glyphicon-cog ren-icon-edit cursor"><span class="sr-only">编辑</span></i>
+                    </div>
+                </div>
+
+            </div>
+        </div>-->
+                    </div>
+                    <!--<div class="panel-footer">
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="text-right ">
@@ -305,129 +350,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
-                <!-------------------------------------帖子回复2~~~~n------------------------------>
-                <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="media pt10 ren-newest-info">
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
-                                </a>
-                                <div class="media-body pl15">
-                                    <div class="row">
-                                        <div class="col-lg-11">
-                                            <dl>
-                                                <dt>
-                                                    <span class="sender-and-recipients">
-                                                        <a class="msg-receiver sender-name" href="/home#/profile/53045947">张先生</a>至
-                                                        <a href="#/group?id=10279195" class="msg-receiver">
-                                                            <span class="receiver-square" style="background-color:#336699"></span>Mr. 山田's 12th grade group
-                                                        </a>
-                                                    </span>
-                                                </dt>
-                                                <dd>这是一个神奇的网站</dd>
-                                            </dl>
-                                        </div>
-                                        <div class="col-lg-1">
-                                            <i class="glyphicon glyphicon-cog ren-icon-edit cursor"><span class="sr-only">编辑</span></i>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-footer">
-                            <div class="row">
-                                <div class="col-lg-10">
-                                    <div class="text-right ">
-                                        <a href="javascript:void(0)" class="repaly-post">
-                                            <span class="glyphicon glyphicon-comment"> </span><span class="total-reply">2个</span>评论
-                                        </a>
-                                        <a href="javascript:void(0)" class="marleft10">
-                                            <span class="glyphicon glyphicon-share"> </span><span class="total-reply">转发 </span>
-                                        </a>
-                                        <a href="javascript:void(0)" class="marleft10">
-                                            <span class="glyphicon glyphicon-star"> </span><span class="total-reply">收藏 </span>
-                                        </a>
-                                        <a href="javascript:void(0)" class="marleft10">
-                                            <span class="glyphicon glyphicon-share"> </span><span class="total-reply">举报 </span>
-                                        </a>
-                                    </div>
-
-                                </div>
-                                <div class="col-lg-2">
-                                    <div class="text-right">5小时前</div>
-                                </div>
-                            </div>
-                            <div class="row reply-quyu" style="display:none;">
-                                <hr style="background-color:#ddd;"  class="marbottom10"/>
-                                <!------------------------------------评论者信息开始------------------------------------------>
-                                <div class="row">
-                                    <div class="media reply-user-info  ren-newest-info">
-                                        <a class="pull-left" href="#">
-                                            <img class="media-object" src="../img/default_avatar.gif" alt="35*35" title="35*35" style="height:35px; width:35px;">
-                                        </a>
-                                        <div class="media-body pl15">
-                                            <div class="row">
-                                                <div class="col-lg-11">
-                                                    <dl>
-                                                        <dt>
-                                                            <span class="sender-and-recipients">
-                                                                <a class="msg-receiver sender-name" href="/home#/profile/53045947">张先生</a>&nbsp;&nbsp;<span class="subtext">说58 分钟前</span>
-                                                            </span>
-                                                        </dt>
-                                                        <dd>很好 很强大</dd>
-                                                    </dl>
-                                                </div>
-                                                <div class="col-lg-1">
-                                                    <i class="glyphicon glyphicon-cog ren-icon-edit cursor"><span class="sr-only">编辑</span></i>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <hr style="background-color:#ddd;margin-top:-10px;" />
-                                <div class="row">
-                                    <div class="media reply-user-info ren-newest-info">
-                                        <a class="pull-left" href="#">
-                                            <img class="media-object" src="../img/default_avatar.gif" alt="35*35" title="35*35" style="height:35px; width:35px;">
-                                        </a>
-                                        <div class="media-body pl15">
-                                            <div class="row">
-                                                <div class="col-lg-11">
-                                                    <dl>
-                                                        <dt>
-                                                            <span class="sender-and-recipients">
-                                                                <a class="msg-receiver sender-name" href="/home#/profile/53045947">张先生</a>&nbsp;&nbsp;<span class="subtext">说58 分钟前</span>
-                                                            </span>
-                                                        </dt>
-                                                        <dd>很好 很强大</dd>
-                                                    </dl>
-                                                </div>
-                                                <div class="col-lg-1">
-                                                    <i class="glyphicon glyphicon-cog ren-icon-edit cursor"><span class="sr-only">编辑</span></i>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <hr style="background-color:#ddd;margin-top:-10px;" />
-                                <!----------------------------------------评论者信息结束-------------------------------------->
-                                <div class="row marbottom10">
-                                    <div class="col-lg-9 marleft27">
-                                        <textarea class="form-control reply-textarea" id="replay-content" placeholder="输入评论" style="height:34px;"></textarea>
-                                    </div>
-                                    <div class="col-lg-2">
-                                        <button type="button" class="btn btn-default btn-block disabled btn-reply" id="register">评论</button>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                </div>
+               
             </div>
         </div>
     </div>
