--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -111,6 +111,7 @@
                             <hr style="background-color:#ddd" />
                     </div>
                     <div class="row paddrow">
+                        <!------------------------------评论列表-------------------------------->
                         <div class="col-lg-12">
                             <div class="media">
                                 <a class="pull-left" href="#">
@@ -123,6 +124,19 @@
                             </div>
                         </div>
                         <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right" ">回复</a></div>
+                        <div class="col-lg-12">
+                            <div class="media">
+                                <a class="pull-left" href="#">
+                                    <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
+                                    中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right" ">回复</a></div>
+                        <!------------------------------评论列表-------------------------------->
                     </div>
                     <div class="row paddrow">
                         <div class="col-lg-12">
