--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -118,31 +118,37 @@
                                     <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
                                 </a>
                                 <div class="media-body">
-                                    <h5 class="media-heading"><a href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
-                                    中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!
+                                    <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
+                                    <span class="current-reply-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!</span>
                                 </div>
                             </div>
+                            <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right  reply-user-1">回复</a></div>
                         </div>
-                        <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right" ">回复</a></div>
+                        
                         <div class="col-lg-12">
                             <div class="media">
                                 <a class="pull-left" href="#">
                                     <img class="media-object" src="../img/login/u89578882-4.jpg" alt="...">
                                 </a>
                                 <div class="media-body">
-                                    <h5 class="media-heading"><a href="javascript:void(0)">Sunshine</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
-                                    中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!
+                                    <h5 class="media-heading"><a class="current-username" href="javascript:void(0)">Sunshine1</a><span class="post-time-type">2014-09-27 22:19:12</span></h5>
+                                    <span class="current-reply-reply">中间ps的部分用蒙版把明暗涂均匀就完美了! 漂亮!123</span>
                                 </div>
                             </div>
+                            <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right reply-user-1">回复</a></div>
                         </div>
-                        <div class="col-lg-12"><a href="javascript:void(0)" class="pull-right" ">回复</a></div>
+
                         <!------------------------------评论列表-------------------------------->
                     </div>
                     <div class="row paddrow">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12" style="margin-top:20px;">
                             <h4>你的回复</h4>
                         </div>
-                        <div class="col-lg-12">
+                        <div class="col-lg-12" style="margin-top:10px;">
+                            <div class="alert alert-warning alert-dismissible" role="alert" style="display:none">
+                                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                <span class="reply-content"></span><a href="javascript:void(0)" class="marleft10 reply-current-username">Sunshine</a>
+                            </div>
                             <textarea class="form-control reply-textarea" id="replay-content" placeholder="输入你想说的话..." style="height:200px;"></textarea>
                         </div>
                         <div class="col-lg-12" style="margin: 10px 0px 30px 0px;">
@@ -405,6 +411,12 @@
                 var $this = $(this);
                 scrollHeight = $this[0].scrollHeight;
                 $this.height(scrollHeight);
+            });
+            $(".reply-user-1").click(function () {
+                $(".reply-content").html($(this).parent().parent().children().find(".current-reply-reply").text());
+                $(".reply-current-username").html($(this).parent().parent().children().find(".current-username").text());
+                $(".alert-dismissible").show();
+                $(".reply-textarea").focus();
             });
         })
 
