--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row paddrow">
+                    <div class="row paddrow" style="margin-top:20px;">
                             <a href="#" class="on">回应</a>
                             <hr style="background-color:#ddd" />
                     </div>
