--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -87,7 +87,7 @@
             <div class="col-xs-9">
                 <!--帖子回复1-->
                 <div class="panel panel-default">
-                    <div class="row paddrow">
+                    <div class="row paddrow" style="margin-top:20px;">
                         <h4>这个世界上再没有一件比自己开店更美好的事情了！比特城邦峨眉店股东招募正在进行中！</h4>
                         <div class="media">
                             <a class="pull-left" href="#">
